# index_vec

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
example_generated/: example_generated.rs
src/: example_generated.rs  idxslice.rs  indexing.rs  lib.rs  macros.rs
tests/: test.rs
